.compile_errors_snapshot.txt
   Compiling gam v0.2.1 (/Users/user/gam)
error[E0432]: unresolved import `crate::gpu::error`
  --> src/gpu/kernels/cell_moments.rs:12:17
   |
12 | use crate::gpu::error::GpuError;
   |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
 --> src/gpu/kernels/fused_xtwx.rs:8:17
  |
8 | use crate::gpu::error::GpuError;
  |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
  --> src/gpu/kernels/hutchpp.rs:10:17
   |
10 | use crate::gpu::error::GpuError;
   |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
 --> src/gpu/kernels/irls_link.rs:8:17
  |
8 | use crate::gpu::error::GpuError;
  |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
 --> src/gpu/kernels/reductions.rs:7:17
  |
7 | use crate::gpu::error::GpuError;
  |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
 --> src/gpu/kernels/row_scale.rs:7:17
  |
7 | use crate::gpu::error::GpuError;
  |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
 --> src/gpu/kernels/spatial.rs:8:17
  |
8 | use crate::gpu::error::GpuError;
  |                 ^^^^^ could not find `error` in `gpu`

error: unused import: `TensorBSplineSpec`
  --> src/terms/term_builder.rs:31:68
   |
31 |     SmoothBasisSpec, SmoothTermSpec, TensorBSplineIdentifiability, TensorBSplineSpec,
   |                                                                    ^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> src/lib.rs:45:9
   |
45 | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

